--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,11 @@
 [build]
 functions = "netlify/functions"
 
+command = "vite build"
 publish = "dist"
 
 [[redirects]]
 from = "/*"
 to = "/index.html"
 status = 200
-  command = "npm run build"
-   node_bundler = "esbuild"
-[build]
+
