Update netlify.toml 7

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,10 @@
   publish = "dist"
   functions = "netlify/functions"
 
+  [[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
+
 [functions]
   node_bundler = "esbuild"
