Update netlify.toml  11

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,8 +4,8 @@
   functions = "./netlify/functions"
 
   [[redirects]]
-from = "./*"
-to = "./index.html"
+from = "/*"
+to = "/index.html"
 status = 200
 
 [functions]
