--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,14 @@
 [build]
   command = "vite build"
   publish = "dist"
-  functions = "./netlify/functions"
+  functions = "netlify/functions"
 
-  [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
 
-[functions]
-  node_bundler = "esbuild"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
