--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "vite build"
   publish = "dist"
-  functions = "netlify/functions"
+  functions = "npm run build"
 
 [[redirects]]
   from = "/api/*"
