--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,18 @@
   functions = "netlify/functions"
 
 
+  [[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+  
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+
+
 [[redirects]]
   from = "/*"
   to = "/"
