Update netlify.toml anistia 2

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,5 +8,9 @@
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
-  
+
+  [[redirects]]
+  from = "/*"
+  to = "/"
+  status = 200
 
