--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,8 @@
   command = "vite build"
   publish = "dist"
   functions = "netlify/functions"
- 
+
+ [[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
