--- a/netlify.toml
+++ b/netlify.toml
@@ -5,10 +5,15 @@
 
  [[redirects]]
   from = "/api/*"
-  to = "/netlify/functions/:splat"
+  to = "/*netlify/functions/:splat"
+  status = 200
+
+  [[redirects]]
+  from = "/*"  
+  to = "/"
   status = 200
   
 [[redirects]]
-  from = "/*" 
-  to = "/"
+  from = "/*"  
+  to = "/*index.html"
   status = 200
